--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,34 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">40,932</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">4</td><td class="num">37,347</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">runners.RunnerClass</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1753270968729</td><td rowspan="1">38588</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="4">runners.RunnerClass</td><td><a href="#m0">runScenario</a></td><td rowspan="4">1756717222422</td><td rowspan="4">4337</td></tr><tr class="failedeven"><td><a href="#m1">runScenario</a></td></tr><tr class="failedeven"><td><a href="#m2">runScenario</a></td></tr><tr class="failedeven"><td><a href="#m3">runScenario</a></td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">runners.RunnerClass</td><td><a href="#m4">runScenario</a></td><td rowspan="1">1756717212020</td><td rowspan="1">6646</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">runners.RunnerClass#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Register a user with valid details&quot;</td><td>&quot;User registration or sign up&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">runners.RunnerClass#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;User logout from the account created&quot;</td><td>&quot;Delete Account functionality&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">junit.framework.ComparisonFailure: expected:&lt;Automation Exercise[]&gt; but was:&lt;Automation Exercise[ - Signup / Login]&gt;
+	at junit.framework.Assert.assertEquals(Assert.java:100)
+	at junit.framework.Assert.assertEquals(Assert.java:107)
+	at stepDefinitions.loginStepDef.user_should_be_navigated_to_the_home_page(loginStepDef.java:52)
+	at ✽.User should be navigated to the homePage(file:///C:/Users/Harsh/eclipse-workspace/BDDFramework/src/test/resources/features/logout_delete.feature:8)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">runners.RunnerClass#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;User deletes the account created&quot;</td><td>&quot;Delete Account functionality&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">junit.framework.ComparisonFailure: expected:&lt;Automation Exercise[]&gt; but was:&lt;Automation Exercise[ - Signup / Login]&gt;
+	at junit.framework.Assert.assertEquals(Assert.java:100)
+	at junit.framework.Assert.assertEquals(Assert.java:107)
+	at stepDefinitions.loginStepDef.user_should_be_navigated_to_the_home_page(loginStepDef.java:52)
+	at ✽.User should be navigated to the homePage(file:///C:/Users/Harsh/eclipse-workspace/BDDFramework/src/test/resources/features/logout_delete.feature:8)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">runners.RunnerClass#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;User logins with valid details successfully&quot;</td><td>&quot;Login Account functionality&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">junit.framework.ComparisonFailure: expected:&lt;Automation Exercise[]&gt; but was:&lt;Automation Exercise[ - Signup / Login]&gt;
+	at junit.framework.Assert.assertEquals(Assert.java:100)
+	at junit.framework.Assert.assertEquals(Assert.java:107)
+	at stepDefinitions.loginStepDef.user_should_be_navigated_to_the_home_page(loginStepDef.java:52)
+	at ✽.User should be navigated to the homePage(file:///C:/Users/Harsh/eclipse-workspace/BDDFramework/src/test/resources/features/login.feature:19)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">runners.RunnerClass#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Register a user with valid details&quot;</td><td>&quot;User registration or sign up&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">junit.framework.ComparisonFailure: expected:&lt;...on Exercise - Signup[]&gt; but was:&lt;...on Exercise - Signup[ / Login]&gt;
+	at junit.framework.Assert.assertEquals(Assert.java:100)
+	at junit.framework.Assert.assertEquals(Assert.java:107)
+	at stepDefinitions.registerStepDef.user_should_be_on_the_signup_page(registerStepDef.java:67)
+	at ✽.User should be on the Signup page(file:///C:/Users/Harsh/eclipse-workspace/BDDFramework/src/test/resources/features/a_register.feature:9)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">runners.RunnerClass#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;User logins with invalid details&quot;</td><td>&quot;Login Account functionality&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
